add_library(data_structures string/string_.c string/string_.h string/tasks/task1.h string/tasks/task2.h string/tasks/task3.h string/tasks/task4.h string/tasks/task5.h string/tasks/task6.h string/tasks/task7.h string/tasks/task8.h string/tasks/task9.h string/tasks/task10.h string/tasks/task11.h string/tasks/task12.h string/tasks/task13.h string/tasks/task14.h string/tasks/task15.h string/tasks/task16.h string/tasks/task17.h string/tasks/task18.h string/tasks/task19.h)
target_link_libraries(data_structures algorithms)